test/programs/invalid/interpreter/VariableNotDefinedAssignment.lox
var x = 1;
x = y; // error
